# toolchain_llvm-project

./: Android.mk  groups  project.config
clang-tools-extra/clang-tidy/: ClangTidy.cpp  ClangTidyCheck.h  ClangTidyDiagnosticConsumer.cpp  ClangTidyDiagnosticConsumer.h  ClangTidyModule.cpp  ClangTidyModule.h  ClangTidyOptions.cpp  ClangTidyOptions.h
clang-tools-extra/clang-tidy/abseil/: AbseilTidyModule.cpp
clang-tools-extra/clang-tidy/altera/: KernelNameRestrictionCheck.cpp
clang-tools-extra/clang-tidy/bugprone/: BugproneTidyModule.cpp  ForwardDeclarationNamespaceCheck.cpp  LambdaFunctionNameCheck.cpp  MacroParenthesesCheck.cpp  MacroRepeatedSideEffectsCheck.cpp  SuspiciousIncludeCheck.cpp
clang-tools-extra/clang-tidy/cert/: SetLongJmpCheck.cpp
clang-tools-extra/clang-tidy/cppcoreguidelines/: MacroUsageCheck.cpp
clang-tools-extra/clang-tidy/google/: AvoidUnderscoreInGoogletestNameCheck.cpp  TodoCommentCheck.cpp  UpgradeGoogletestCaseCheck.cpp
clang-tools-extra/clang-tidy/llvm/: IncludeOrderCheck.cpp
clang-tools-extra/clang-tidy/llvmlibc/: RestrictSystemLibcHeadersCheck.cpp
clang-tools-extra/clang-tidy/misc/: MiscTidyModule.cpp  UnusedUsingDeclsCheck.cpp
clang-tools-extra/clang-tidy/modernize/: DeprecatedHeadersCheck.cpp  ReplaceDisallowCopyAndAssignMacroCheck.cpp  UseNullptrCheck.cpp
clang-tools-extra/clang-tidy/portability/: RestrictSystemIncludesCheck.cpp  RestrictSystemIncludesCheck.h
clang-tools-extra/clang-tidy/readability/: ElseAfterReturnCheck.cpp  RedundantPreprocessorCheck.cpp  SimplifyBooleanExprCheck.cpp
clang-tools-extra/clang-tidy/tool/: ClangTidyMain.cpp
clang-tools-extra/clang-tidy/utils/: HeaderGuard.cpp  IncludeInserter.cpp  RenamerClangTidyCheck.cpp
clang-tools-extra/clangd/: DumpAST.cpp
clang-tools-extra/clangd/unittests/: TestTU.cpp
clang-tools-extra/test/clang-tidy/checkers/: abseil-no-internal-dependencies.cpp  abseil-upgrade-duration-conversions.cpp  bugprone-forward-declaration-namespace-header.cpp  bugprone-forward-declaration-namespace.cpp  bugprone-reserved-identifier.cpp  bugprone-suspicious-include.cpp  cppcoreguidelines-interfaces-global-init.cpp  cppcoreguidelines-macro-usage-command-line-macros.cpp  google-namespaces.cpp  google-objc-function-naming.m  google-upgrade-googletest-case.cpp  llvm-include-order.cpp  llvm-prefer-register-over-unsigned.cpp  llvmlibc-implementation-in-namespace.cpp  llvmlibc-restrict-system-libc-headers.cpp  misc-no-recursion.cpp  misc-unused-using-decls.cpp  modernize-deprecated-headers-cxx03.cpp  skip-headers-1.cpp  (+12 more)
clang/docs/: ClangCommandLineReference.rst
clang/lib/AST/: ExprConstant.cpp
clang/lib/ASTMatchers/: ASTMatchFinder.cpp
clang/lib/Basic/: TargetInfo.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CodeGenPGO.cpp
clang/lib/Driver/: ToolChain.cpp
clang/test/Driver/: coverage-ld.c  fuse-ld.c  sanitizer-ld.c
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: base-config-ix.cmake  config-ix.cmake
compiler-rt/cmake/Modules/: AllSupportedArchDefs.cmake
compiler-rt/lib/builtins/: os_version_check.c
compiler-rt/lib/sanitizer_common/: sanitizer_common_interceptors.inc  sanitizer_linux.h
compiler-rt/lib/tsan/: CMakeLists.txt
compiler-rt/lib/tsan/tests/: CMakeLists.txt
compiler-rt/test/tsan/: CMakeLists.txt
libcxx/: Android.mk
libcxx/include/: __config  __locale  cstdio  regex
libcxx/test/support/: filesystem_test_helper.h  nasty_macros.h  rapid-cxx-test.h
libcxx/utils/: merge_archives.py
libcxxabi/: Android.bp  Android.mk
libcxxabi/src/: cxa_default_handlers.cpp
libunwind/: Android.bp  Android.mk
lld/ELF/: AArch64ErrataFix.cpp  Config.h  Driver.cpp  InputFiles.cpp  InputSection.cpp  LinkerScript.cpp  Relocations.cpp  SymbolTable.cpp  Symbols.cpp  SyntheticSections.cpp  SyntheticSections.h  Target.cpp  Target.h  Thunks.cpp  Writer.cpp
lld/ELF/Arch/: AArch64.cpp  ARM.cpp  Hexagon.cpp  Mips.cpp  PPC.cpp  PPC64.cpp  RISCV.cpp  SPARCV9.cpp  X86.cpp  X86_64.cpp
lld/test/ELF/: aarch64-condb-reloc.s  aarch64-gnu-ifunc-plt.s  aarch64-gnu-ifunc2.s
lld/tools/lld/: lld.cpp
lldb/: CMakeLists.txt
lldb/scripts/: CMakeLists.txt
lldb/source/Initialization/: SystemInitializerCommon.cpp
lldb/tools/driver/: Platform.h
lldb/tools/lldb-mi/: MIDataTypes.h  Platform.h
lldb/tools/lldb-vscode/: VSCode.cpp
llgo/: README.TXT
llvm/lib/CodeGen/: IfConversion.cpp
llvm/lib/IR/: Instructions.cpp
llvm/lib/Linker/: IRMover.cpp
llvm/unittests/IR/: InstructionsTest.cpp
(+53 files in other folders)
